2nd commit : fixed project images not loading
since image URLs in JSON are loaded as-is at runtime and the actual images will get bundled and hashed  by vite.

Inconclusion only files in the public folder can be reliably accessed via URL strings in production like what i did now

--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -3,7 +3,7 @@
     "id": 1,
     "title": "Expense Tracker",
     "description": "Woke up one day and decided to act like an adult, built an expense tracker to stop wasting money on useless things like groceries.",
-    "image": "./src/media/expense-tracker.png",
+    "image": "/media/expense-tracker.png",
     "tags": ["Vue.js", "Electron.js", "in-progress"],
     "category": "dev",
     "demoUrl": "",
@@ -13,7 +13,7 @@
     "id": 2,
     "title": "Manufacturer's Online Showroom",
     "description": "Created a Vue.js SPA to put the company online and give clients a clear, visual look at product samples.",
-    "image": "./src/media/artiplast-demo.png",
+    "image": "/media/artiplast-demo.png",
     "tags": ["Vue.js", "Bootstrap 5", "animate.css"],
     "category": "pro",
     "demoUrl": "https://artiplast-repo-29wb.vercel.app/",
@@ -23,7 +23,7 @@
     "id": 3,
     "title": "This very Portfolio",
     "description": "A responsive portfolio website built with Vue.js",
-    "image": "./src/media/portfolio-demo.png",
+    "image": "/media/portfolio-demo.png",
     "tags": ["Vue.js", "Vercel"],
     "category": "pro",
     "demoUrl": "",
@@ -33,7 +33,7 @@
     "id": 4,
     "title": "E-commerce Platform",
     "description": "My proudest project so far, a full-featured e-commerce platform for wholesalers, handling content creation (blogging), client management, products, brands, automated mailing, and more. all powered by Django.",
-    "image": "./src/media/fbs-demo.png",
+    "image": "/media/fbs-demo.png",
     "tags": ["Django", "Bootstrap 5", "NGINX"],
     "category": "pro",
     "demoUrl": "https://sefbs.tn/",
@@ -43,7 +43,7 @@
     "id": 5,
     "title": "Content Management System",
     "description": "A content management website I built for my final year project, powered by Wagtail.",
-    "image": "./src/media/atgt-demo.png",
+    "image": "/media/atgt-demo.png",
     "tags": ["Wagtail", "Django", "Bootstrap 5", "AOS", "animate.css"],
     "category": "pro",
     "demoUrl": "https://atgt-tunisie.com/",
@@ -53,7 +53,7 @@
     "id": 6,
     "title": "Chat Application",
     "description": "An exploration sandbox diving into headless frameworks: DRF (JWT, serialization, media/static file management), Vue with Axios, Pinia, and other plugins. Also built a live chatroom using WebSockets between the two.",
-    "image": "./src/media/chat-application.png",
+    "image": "/media/chat-application.png",
     "tags": ["Django", "Vue.js", "WebSocket", "DRF"],
     "category": "dev",
     "demoUrl": "",
@@ -63,7 +63,7 @@
     "id": 7,
     "title": "Django Starter",
     "description": "A maximalist Django 5.2 starter packed with optional Bootstrap 5.3, Font Awesome 6, theme toggle, full settings, demo templates, and handy quality-of-life features.",
-    "image": "./src/media/django-starter.jpg",
+    "image": "/media/django-starter.jpg",
     "tags": ["Django", "Bootstrap 5", "utility"],
     "category": "pro",
     "demoUrl": "",
@@ -73,7 +73,7 @@
     "id": 8,
     "title": "Electron js Starter",
     "description": "A minimalist setup to quickly scaffold an Electron app using Vue 3 and TypeScript.",
-    "image": "./src/media/electron-starter.jpg",
+    "image": "/media/electron-starter.jpg",
     "tags": ["Electron.js", "Vue.js", "Node.js", "TypeScript", "utility"],
     "category": "pro",
     "demoUrl": "",
